--- a/Codigo/clase9/index.html
+++ b/Codigo/clase9/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Clase 9</title>
 </head>
 <body>
-    <input type="text" placeholder="ingrese numero de post" id="input">
-    <button type="button">btn</button>
+    <div class="container">
+        <input type="text" placeholder="ingrese numero de post" id="input">
+        <button type="button" id="btn">Ejecutar</button>
+        <span id="span"></span>
+    </div>
     <script src="./fetch.js"></script>
 </body>
 </html>
