[Clase 10] movies tarea completa

--- a/Codigo/Clase10/movies23643/index.html
+++ b/Codigo/Clase10/movies23643/index.html
@@ -7,8 +7,11 @@
     <title>Movies 23643</title>
 </head>
 <body>
+    <div class="header">
+        <h1>Movies CAC23646</h1>
+        <h4 class="header__subtitle"></h4>
+    </div>
     <div class="container">
-
     </div>
     <div class="pagination">
         <button id="btn_previous">Anterior</button>
