[Clase 11] add more styles and event click on cards

--- a/Codigo/Clase11/movies23643/index.html
+++ b/Codigo/Clase11/movies23643/index.html
@@ -13,9 +13,13 @@
     </div>
     <div class="container">
     </div>
+    <div class="details">
+
+    </div>
     <div class="pagination">
         <button id="btn_previous">Anterior</button>
         <button id="btn_next">Siguiente</button>
+        <button id="btn_volver">Volver</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./app.js"></script>
