[Clase 11] Primera parte de la funcion detalles de peli, falta

--- a/Codigo/Clase11/movies23643/index.html
+++ b/Codigo/Clase11/movies23643/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container">
     </div>
-    <div class="details">
+    <div class="container_details">
 
     </div>
     <div class="pagination">
