[Clase 17] Fix styles

--- a/Codigo/movies-cac23643/index.html
+++ b/Codigo/movies-cac23643/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<!-- 
+mas oscuro: #040D12
+            #183D3D
+            #5C8374
+mas claro:  #93B1A6           
+ -->
